<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menumain_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About Task Timer</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit task details.</string>
    <string name="delete_button_description">Button to delete task.</string>
    <string name="addedit_save_button">Save Task</string>
    <string name="addedit_name_hint">Task Name (required)</string>
    <string name="addedit_description_hint">Task Description</string>
    <string name="addedit_sortorder_hint">Sort Order: sorts low to high</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with the same task order will be sorted alphabetically.\n\nTapping a task will start the timer for that task and will stop the timer for any previous task that was being timed.\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deletedialog_positive_caption">Delete</string>
    <string name="deletedialog_message">Deleting will also delete all timing data associated with task id %1d: %2$s.</string>
    <string name="cancelEditDialog_message">You have unsaved changes. Do you want to abandon changes or continue editing?</string>
    <string name="cancelEditDialog_positive_caption">Continue Editing</string>
    <string name="cancelEditDialog_negative_caption">Abandon Changes</string>
    <string name="about_copyright">Copyright © 2021 Jonathan Louis</string>
    <string name="about_weblink">Instructions available at </string>
    <string name="about_weblink_url"><u>http://www.example.com</u></string>
    <string name="about_weblink_21">Instructions available at www.example.com</string>
    <string name="about_email">For support email tasktimer@email.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> @ www.openclipart.org by <b>Anonymous</b></string>
    <string name="currentTiming">Timing: </string>
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show Week</string>
    <string name="rm_title_filter_date">Set Report Date</string>
    <string name="rm_title_delete">Delete Old Timings</string>
    <string name="date_title_filter">Select date for report</string>
    <string name="date_title_delete">Select date to DELETE up to</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %1s?</string>
</resources>