<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jonathanlouis.tasktimerapp.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menumain_addTask"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/menumain_showDurations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="102"
        android:title="@string/menumain_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/menumain_showAbout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_generate"
        android:orderInCategory="104"
        android:title="@string/menumain_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>