<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingLeft="24dp"
    android:paddingEnd="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        tools:text="v1.0.0" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/about_copyright"
        android:textColor="?android:attr/textColorSecondary" />

    <include
        layout="@layout/about_web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:autoLink="email"
        android:text="@string/about_email"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:autoLink="web"
        android:text="@string/about_credits"
        android:textColor="?android:attr/textColorSecondary" />
</LinearLayout>